--- a/views/daftarProdukPelanggan.ejs
+++ b/views/daftarProdukPelanggan.ejs
@@ -15,8 +15,8 @@
   <div class="layout-container">
     <%- include('layout/sidebar') %>
 
-      <main class="cart-container-produk">
-        <h1 class="page-title-produk">Daftar Produk</h1>
+      <main class="main-content">
+        <h1 >Daftar Produk</h1>
 
         <div class="cart-grid-produk">
           <% produkList.forEach(produk=> { %>
